# madlad-finetuning

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_train.py  train.ipynb  train.py  train_nllb.py
data/: data.csv  en-NASB.txt  source.txt  target.txt
utils/: ingest_zip.py  upload_data.py
